Scheduler finished
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@7211 ebf7c1c2-ba36-0410-9fe8-c592906822b4